--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <p>Education:First Year student on an Undergraduate BSc Programme in Management</p>
                 <p>Location: The Uk's number 1 sports instituion: Loughborough University </p></div>
                 <div style="flex:1"><img src="PP.jpeg" style="width:200px; border-radius:100px"></div>
-                <div style="flex:1 "> <img src="loughlogo.png" style="width:200px;"> </div>
+                <div style="flex:1 "> <img src="Loughlogo.jpeg" style="width:200px;"> </div>
                 
 
             </header> <hr>
